--- a/GW_Heterozygosity_Variance.qmd
+++ b/GW_Heterozygosity_Variance.qmd
@@ -779,9 +779,6 @@ ind_with_metadata_included.regionIndHetStan = meanAcrossRegionIndHetStan
 # check whether missing data related to heterozygosity (good news: not really)
 plot(ind_with_metadata_included.numMissings, meanAcrossRegionIndHetStan)
 
-# to inspect data, sort by regionIndHetStan :
-#ind_with_metadata_included_sortedbyHetVar = sort(ind_with_metadata_included, [:regionIndHetStan])
-
 # PCA of all individuals:
 
 genos_highHetVarRegion_imputed = Impute.svd(Matrix{Union{Missing, Float32}}(genos_highHetVarRegion))
@@ -800,49 +797,51 @@ PCAmodelAll = plotPCA(genos_highHetVarRegion_imputed, ind_with_metadata_included
 
 display(PCAmodelAll.PCAfig)
 
-
-# choose inds with low IndHet in high HetVar region:
-indSelection = (meanAcrossRegionIndHetStan .< 1.75)    # 0.75
-ind_with_metadata_lowIndHetStan = ind_with_metadata_included[indSelection, :]
-
-genos_lowIndHetStan = genos_highHetVarRegion[indSelection, :]
-
-# check that missing genotypes are encoded as `missing` rather than `-1`:
-if sum(ismissing.(genos_lowIndHetStan)) == 0
-    println("Warning: No `missing` genotypes to be imputed")
-end
-
-# impute missing genotypes:
-
-genos_lowIndHetStan_imputed = Impute.svd(Matrix{Union{Missing, Float32}}(genos_lowIndHetStan))
-
-flipPC1 = true
-flipPC2 = true
-
-PCAmodel = plotPCA(genos_lowIndHetStan_imputed, ind_with_metadata_lowIndHetStan, 
-            groups_to_plot_PCA, group_colors_PCA; 
-            sampleSet = "greenish warblers (lowIndHetStan)", regionText = regionText,
-            flip1 = flipPC1, flip2 = flipPC2,
-            lineOpacity = 0.7, fillOpacity = 0.6,
-            symbolSize = 14, showTitle = true,
-            xLabelText = string("Region PC1"), yLabelText = string("Region PC2"),
-            showPlot = false)
-
-display(PCAmodel.PCAfig)
-
 # Add PC values to metadata for individuals included in PCA above:
 if flipPC1
-    PCAmodel.metadata.PC1 = -1 .* PCAmodel.values[1,:]
+    PCAmodelAll.metadata.PC1 = -1 .* PCAmodelAll.values[1,:]
 else 
-    PCAmodel.metadata.PC1 = PCAmodel.values[1,:]
+    PCAmodelAll.metadata.PC1 = PCAmodelAll.values[1,:]
 end
 if flipPC2
-    PCAmodel.metadata.PC2 = -1 .* PCAmodel.values[2,:]
+    PCAmodelAll.metadata.PC2 = -1 .* PCAmodelAll.values[2,:]
 else
-    PCAmodel.metadata.PC2 = PCAmodel.values[2,:]
+    PCAmodelAll.metadata.PC2 = PCAmodelAll.values[2,:]
 end
-PCAmodel.metadata.PC3 = PCAmodel.values[3,:]
+PCAmodelAll.metadata.PC3 = PCAmodelAll.values[3,:]
 
+# For the next bit to work with above, make sure that all individuals in the above `plotPCA` command
+# are included in the `groups_to_plot_PCA`
+
+# choose inds with low IndHet in high HetVar region:
+indSelection_lowIndHetStan = (meanAcrossRegionIndHetStan .< 1.75) 
+
+#Plot only the lowIndHetStan individuals:
+
+f = CairoMakie.Figure()
+ax = Axis(f[1, 1],
+    title = "PC1 vs. PC2, only low heterozygosity",
+    xlabel = "Region PC1", xlabelsize = 24,
+    ylabel = "Region PC2", ylabelsize = 24,
+    autolimitaspect = 1)
+hidedecorations!(ax, label = false, ticklabels = false, ticks = false) # hide background lattice
+for i in eachindex(groups_to_plot_PCA) 
+    selection = (PCAmodelAll.metadata.Fst_group .== groups_to_plot_PCA[i]) .& indSelection_lowIndHetStan
+    CairoMakie.scatter!(ax, PCAmodelAll.metadata.PC1[selection], PCAmodelAll.metadata.PC2[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
+end
+display(f)
+
+```
+
+### Save the individual colors in the metadata
+
+```{julia}
+indColors = fill("", size(PCAmodelAll.metadata, 1))
+for i in axes(PCAmodelAll.metadata, 1)
+    indColors[i] = group_colors_PCA[findfirst(groups_to_plot_PCA .== PCAmodelAll.metadata.Fst_group[i])]
+end
+PCAmodelAll.metadata.indColorLeft = indColors
+PCAmodelAll.metadata.indColorRight = indColors
 ```
 
 # Plot PC1 vs. PC2:
@@ -856,8 +855,8 @@ ax = Axis(f[1, 1],
     autolimitaspect = 1)
 hidedecorations!(ax, label = false, ticklabels = false, ticks = false) # hide background lattice
 for i in eachindex(groups_to_plot_PCA) 
-    selection = PCAmodel.metadata.Fst_group .== groups_to_plot_PCA[i]
-    CairoMakie.scatter!(ax, PCAmodel.metadata.PC1[selection], PCAmodel.metadata.PC2[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
+    selection = PCAmodelAll.metadata.Fst_group .== groups_to_plot_PCA[i]
+    CairoMakie.scatter!(ax, PCAmodelAll.metadata.PC1[selection], PCAmodelAll.metadata.PC2[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
 end
 display(f)
 ```
@@ -873,8 +872,8 @@ ax = Axis(f[1, 1],
     autolimitaspect = 1)
 hidedecorations!(ax, label = false, ticklabels = false, ticks = false) # hide background lattice
 for i in eachindex(groups_to_plot_PCA) 
-    selection = PCAmodel.metadata.Fst_group .== groups_to_plot_PCA[i]
-    CairoMakie.scatter!(ax, PCAmodel.metadata.PC1[selection], PCAmodel.metadata.PC3[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
+    selection = PCAmodelAll.metadata.Fst_group .== groups_to_plot_PCA[i]
+    CairoMakie.scatter!(ax, PCAmodelAll.metadata.PC1[selection], PCAmodelAll.metadata.PC3[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
 end
 display(f)
 ```
@@ -883,8 +882,6 @@ display(f)
 # At chr 15 high HetVar region, there are only 5 clear haplogroups. Divide samples into those groups, based on PCA scores, and then calculate pi within and pi between
 
 ```{julia}
-# Inspect Z chromosome PCA of low IndHet (< 1.75) individuals,
-# and specify group boundaries:
 
 clusterNames = ["virLud",
                 "nit",
@@ -898,34 +895,41 @@ clusterColors = ["green",
                 "orange",
                 "red"]
 
-vir_lud = (PCAmodel.metadata.PC1 .< -5)
-nit = (-5 .< PCAmodel.metadata.PC1 .< -2.5)
-troch = (-1 .< PCAmodel.metadata.PC1 .< 2.5) .& (PCAmodel.metadata.PC3 .< 1)
-obs = (0 .< PCAmodel.metadata.PC1 .< 2) .& (1 .< PCAmodel.metadata.PC3 .< 4)
-plumb = (5 .< PCAmodel.metadata.PC1)
+virLud = (PCAmodelAll.metadata.PC1 .< -5) .& 
+            indSelection_lowIndHetStan
+nit = (-5 .< PCAmodelAll.metadata.PC1 .< -2.5) .&
+            indSelection_lowIndHetStan
+troch = (-1 .< PCAmodelAll.metadata.PC1 .< 2.5) .&
+            (PCAmodelAll.metadata.PC3 .< 1) .&
+            indSelection_lowIndHetStan
+obs = (0 .< PCAmodelAll.metadata.PC1 .< 3) .&
+            (-5.5 .< PCAmodelAll.metadata.PC2 .< -3) .& 
+            indSelection_lowIndHetStan
+plumb = (7 .< PCAmodelAll.metadata.PC1) .& 
+            indSelection_lowIndHetStan
 
 # check the individuals in each group
-PCAmodel.metadata.Fst_group[vir_lud]
-PCAmodel.metadata.Fst_group[nit]
-PCAmodel.metadata.Fst_group[troch]
-PCAmodel.metadata.Fst_group[obs]
-PCAmodel.metadata.Fst_group[plumb]
+PCAmodelAll.metadata.Fst_group[virLud]
+PCAmodelAll.metadata.Fst_group[nit]
+PCAmodelAll.metadata.Fst_group[troch]
+PCAmodelAll.metadata.Fst_group[obs]
+PCAmodelAll.metadata.Fst_group[plumb]
 
-clusterArray = [vir_lud nit troch obs plumb]
+clusterArray = [virLud nit troch obs plumb]
 
 # show numbers in each group
-sum(clusterArray, dims=1)
+println("The numbers in each group are $(sum(clusterArray, dims=1)) and the sum of those is $(sum(sum(clusterArray, dims=1)))")
 
 # create vectors that indicate the groups and plot order for this analysis:
-clusterMembership = fill("none", nrow(PCAmodel.metadata))
-plotOrder = fill(-9, nrow(PCAmodel.metadata))
+clusterMembership = fill("none", nrow(PCAmodelAll.metadata))
+plotOrder = fill(-9, nrow(PCAmodelAll.metadata))
 for i in eachindex(clusterArray[1,:])
     clusterMembership[clusterArray[:,i]] .= clusterNames[i]
     plotOrder[clusterArray[:,i]] .= i
 end
 
 # Calculate allele freqs and sample sizes
-freqs, sampleSizes = getFreqsAndSampleSizes(genos_lowIndHetStan, clusterMembership, clusterNames)
+freqs, sampleSizes = getFreqsAndSampleSizes(genos_highHetVarRegion, clusterMembership, clusterNames)
 println("Calculated population allele frequencies and sample sizes")
 
 # Calculate per-site pi (within-group nucleotide distance)
@@ -947,7 +951,7 @@ regionPiTable = DataFrame(cluster = clusterNames, pi = getRegionPi(sitePi))
 ─────┼─────────────────────
    1 │ virLud   0.00892738
    2 │ nit      0.00677711
-   3 │ troch    0.00707795
+   3 │ troch    0.00725483
    4 │ obs      0.0083953
    5 │ plumb    0.00673292 =#
 
@@ -957,31 +961,28 @@ regionDxyTable = DataFrame(cluster_pair = pairwiseDxyClusterNames, Dxy = getRegi
      │ String        Float64   
 ─────┼─────────────────────────
    1 │ virLud_nit    0.032793
-   2 │ virLud_troch  0.03253
+   2 │ virLud_troch  0.0326016
    3 │ virLud_obs    0.0334515
    4 │ virLud_plumb  0.041869
-   5 │ nit_troch     0.0388383
+   5 │ nit_troch     0.0389012
    6 │ nit_obs       0.0393449
    7 │ nit_plumb     0.0476769
-   8 │ troch_obs     0.0150106
-   9 │ troch_plumb   0.029365
+   8 │ troch_obs     0.0150895
+   9 │ troch_plumb   0.0294242
   10 │ obs_plumb     0.0297807 =#
 
 # Make a genotype-by-individual plot using all variable loci in the region,
-# by setting `Fst_cutoff` to super low value
-groupsToCompare = "vir_plumb"
-Fst_cutoff = -100 # super low to show all SNPs
 missingFractionAllowed = 0.1
 # in metadata, replace `Fst_group` column with cluster info (needed for the function below):
-PCAmodel.metadata.Fst_group = clusterMembership
-PCAmodel.metadata.plot_order = plotOrder
+PCAmodelAll.metadata.Fst_group = clusterMembership
+PCAmodelAll.metadata.plot_order = plotOrder
 
 # limit the SNPs to those with variants greater than 50% in 
 # at least one pop, and less than 50% in at least one pop.
 # (So for each column in `freqs`, the maximum should be > 0.5 
 # and the minimum should be < 0.5)
 selectedSNPs = (vec(maximum(freqs, dims=1)) .> 0.5) .& (vec(minimum(freqs, dims=1)) .< 0.5)
-genos_selectedSNPs = genos_lowIndHetStan[:, selectedSNPs]
+genos_selectedSNPs = genos_highHetVarRegion[:, selectedSNPs]
 pos_selectedSNPs = pos_highHetVarRegion[selectedSNPs, :]
 Fst_selectedSNPs = Fst[:, selectedSNPs]
 freqs_selectedSNPs = freqs[:, selectedSNPs]
@@ -990,12 +991,194 @@ freqs_selectedSNPs = freqs[:, selectedSNPs]
 numIndsToPlot = [15, 15, 15, 15, 15, 15]
 
 genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNames, numIndsToPlot, 
-                                            genos_selectedSNPs, PCAmodel.metadata;
+                                            genos_selectedSNPs, PCAmodelAll.metadata;
                                             sortByMissing = true)
 
 plotGenotypeByIndividual(regionInfo, pos_selectedSNPs,
                 genosForGBI, indMetadataforGBI, freqs_selectedSNPs, clusterNames, clusterColors;
-                missingFractionAllowed = missingFractionAllowed)
+                missingFractionAllowed = missingFractionAllowed,
+                indColorRightProvided = true)
+```
+
+## Now show a GBI plot like above, but with heterozygotes:
+
+```{julia}
+
+clusterNamesWithHets = ["virLud",
+                        "nit",
+                        "virLud_troch",
+                        "troch",
+                        "obs",
+                        "plumb",
+                        "vir_plumb"]
+
+clusterColorsWithHets = ["blue",
+                        "grey",
+                        "yellowgreen",
+                        "yellow",
+                        "orange",
+                        "red",
+                        "purple"]
+
+virLud_troch = (-5 .< PCAmodelAll.metadata.PC1 .< 0) .&
+                (-5.5 .< PCAmodelAll.metadata.PC2 .< 0) .&
+                 .!indSelection_lowIndHetStan
+vir_plumb = (-2 .< PCAmodelAll.metadata.PC1 .< 2) .&
+                (3 .< PCAmodelAll.metadata.PC2 .< 5.5) .&
+                 .!indSelection_lowIndHetStan
+
+clusterArray = [virLud nit virLud_troch troch obs plumb vir_plumb]
+
+sum(clusterArray, dims=1)
+
+if sum(sum(clusterArray, dims=1)) == size(PCAmodelAll.metadata, 1)
+    println("Good news: Individuals included in a group matches total number of individuals")
+else 
+    println("Warning: Individuals included in a group ($(sum(sum(clusterArray, dims=1)))) do NOT match total number of individuals ($(size(PCAmodelAll.metadata, 1)))")
+end
+
+# create vectors that indicate the groups and plot order for this analysis:
+clusterMembershipWithHets = fill("none", nrow(PCAmodelAll.metadata))
+plotOrderWithHets = fill(-9, nrow(PCAmodelAll.metadata))
+for i in eachindex(clusterArray[1,:])
+    clusterMembershipWithHets[clusterArray[:,i]] .= clusterNamesWithHets[i]
+    plotOrderWithHets[clusterArray[:,i]] .= i
+end
+
+# Add column to main metadata object containing the cluster membership for this highHet region:
+command = "ind_with_metadata_included." * chr * "_cluster = clusterMembershipWithHets"
+eval(Meta.parse(command)) # this executes the command constructed above
+
+# in metadata, replace `Fst_group` column with cluster info (needed for the function below):
+PCAmodelAll.metadata.Fst_group = clusterMembershipWithHets
+PCAmodelAll.metadata.plot_order = plotOrderWithHets
+
+# limit the number of individuals per group to plot
+numIndsToPlotWithHets = fill(15, length(clusterNamesWithHets))
+
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNamesWithHets, numIndsToPlotWithHets, 
+                                            genos_selectedSNPs, PCAmodelAll.metadata;
+                                            sortByMissing = true)
+
+plotGenotypeByIndividual(regionInfo, pos_selectedSNPs,
+                genosForGBI, indMetadataforGBI, freqs_selectedSNPs, clusterNamesWithHets, clusterColorsWithHets;
+                missingFractionAllowed = missingFractionAllowed,
+                indColorLeftProvided = false,
+                indColorRightProvided = true)
+```
+
+## Show just the west area (without nitidus)
+
+```{julia}
+
+clusterNamesWithHetsWest = ["virLud",
+                        "virLud_troch",
+                        "troch"]
+
+clusterColorsWithHetsWest = ["blue",
+                        "yellowgreen",
+                        "yellow"]
+
+# limit the SNPs to those with variants greater than 50% in 
+# at least one pop, and less than 50% in at least one pop.
+# (So for each column in `freqs`, the maximum should be > 0.5 
+# and the minimum should be < 0.5)
+# Calculate allele freqs and sample sizes
+freqs, sampleSizes = getFreqsAndSampleSizes(genos_selectedSNPs, clusterMembershipWithHets, clusterNamesWithHetsWest)
+println("Calculated population allele frequencies and sample sizes")
+selectedSNPs = (vec(maximum(freqs, dims=1)) .> 0.5) .& (vec(minimum(freqs, dims=1)) .< 0.5)
+genos_selectedSNPs2 = genos_selectedSNPs[:, selectedSNPs]
+pos_selectedSNPs2 = pos_selectedSNPs[selectedSNPs, :]
+freqs_selectedSNPs2 = freqs[:, selectedSNPs]
+
+numIndsToPlotWithHets = [100, 100, 100]
+
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNamesWithHetsWest, numIndsToPlotWithHets, 
+                                            genos_selectedSNPs2, PCAmodelAll.metadata;
+                                            sortByMissing = true)
+
+plotGenotypeByIndividual(regionInfo, pos_selectedSNPs2,
+                genosForGBI, indMetadataforGBI, freqs_selectedSNPs2, clusterNamesWithHetsWest, clusterColorsWithHetsWest;
+                missingFractionAllowed = missingFractionAllowed,
+                indColorLeftProvided = false,
+                indColorRightProvided = true)
+
+```
+
+## Show just the east area
+
+```{julia}
+
+clusterNamesWithHetsWest = ["troch",
+                            "obs",
+                            "plumb"]
+
+clusterColorsWithHetsWest = ["yellow",
+                            "orange",
+                            "red"]
+
+# limit the SNPs to those with variants greater than 50% in 
+# at least one pop, and less than 50% in at least one pop.
+# (So for each column in `freqs`, the maximum should be > 0.5 
+# and the minimum should be < 0.5)
+# Calculate allele freqs and sample sizes
+freqs, sampleSizes = getFreqsAndSampleSizes(genos_selectedSNPs, clusterMembershipWithHets, clusterNamesWithHetsWest)
+println("Calculated population allele frequencies and sample sizes")
+selectedSNPs = (vec(maximum(freqs, dims=1)) .> 0.5) .& (vec(minimum(freqs, dims=1)) .< 0.5)
+genos_selectedSNPs2 = genos_selectedSNPs[:, selectedSNPs]
+pos_selectedSNPs2 = pos_selectedSNPs[selectedSNPs, :]
+freqs_selectedSNPs2 = freqs[:, selectedSNPs]
+
+numIndsToPlotWithHetsWest = fill(100, length(clusterNamesWithHetsWest))
+
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNamesWithHetsWest, numIndsToPlotWithHetsWest, 
+                                            genos_selectedSNPs2, PCAmodelAll.metadata;
+                                            sortByMissing = true)
+
+plotGenotypeByIndividual(regionInfo, pos_selectedSNPs2,
+                genosForGBI, indMetadataforGBI, freqs_selectedSNPs2, clusterNamesWithHetsWest, clusterColorsWithHetsWest;
+                missingFractionAllowed = missingFractionAllowed,
+                indColorLeftProvided = false,
+                indColorRightProvided = true)
+
+```
+
+## Show just the northern area
+
+```{julia}
+
+clusterNamesWithHetsWest = ["virLud",
+                            "vir_plumb",
+                            "plumb"]
+
+clusterColorsWithHetsWest = ["blue",
+                            "purple",
+                            "red"]
+
+# limit the SNPs to those with variants greater than 50% in 
+# at least one pop, and less than 50% in at least one pop.
+# (So for each column in `freqs`, the maximum should be > 0.5 
+# and the minimum should be < 0.5)
+# Calculate allele freqs and sample sizes
+freqs, sampleSizes = getFreqsAndSampleSizes(genos_selectedSNPs, clusterMembershipWithHets, clusterNamesWithHetsWest)
+println("Calculated population allele frequencies and sample sizes")
+selectedSNPs = (vec(maximum(freqs, dims=1)) .> 0.5) .& (vec(minimum(freqs, dims=1)) .< 0.5)
+genos_selectedSNPs2 = genos_selectedSNPs[:, selectedSNPs]
+pos_selectedSNPs2 = pos_selectedSNPs[selectedSNPs, :]
+freqs_selectedSNPs2 = freqs[:, selectedSNPs]
+
+numIndsToPlotWithHets = [100, 100, 100]
+
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNamesWithHetsWest, numIndsToPlotWithHets, 
+                                            genos_selectedSNPs2, PCAmodelAll.metadata;
+                                            sortByMissing = true)
+
+plotGenotypeByIndividual(regionInfo, pos_selectedSNPs2,
+                genosForGBI, indMetadataforGBI, freqs_selectedSNPs2, clusterNamesWithHetsWest, clusterColorsWithHetsWest;
+                missingFractionAllowed = missingFractionAllowed,
+                indColorLeftProvided = false,
+                indColorRightProvided = true)
+
 ```
 
 
@@ -1129,8 +1312,6 @@ display(f)
 # At chr 28 high HetVar region, there are only 4-5 clear haplogroups (yellow and orange are close). Divide samples into those groups, based on PCA scores, and then calculate pi within and pi between
 
 ```{julia}
-# Inspect Z chromosome PCA of low IndHet (< 1.75) individuals,
-# and specify group boundaries:
 
 clusterNames = ["virLud",
                 "nit",
@@ -1388,7 +1569,7 @@ clusterNamesWithHetsWest = ["troch",
                             "obs",
                             "obsHet",
                             "obs_plumb",
-                            "plumb",]
+                            "plumb"]
 
 clusterColorsWithHetsWest = ["yellow",
                             "orange",
@@ -1954,7 +2135,219 @@ plotGenotypeByIndividual(regionInfo, pos_selectedSNPs2,
 ```
 
 
-### TO DO:
+## Make a summary plot for the cluster types at different chromosome haploblocks (west without nitidus)
+
+Will modify the plotGenotypeByIndividual() function, but need to construct a genotype data structure based on the groups (determined above) for each haploblock.
+
+For west side (without nitidus):
+
+```{julia}
+HaploblockRegions = ["gw15","gw26", "gw28"]
+numHaploblockRegions = length(HaploblockRegions)
+numInds = size(ind_with_metadata_included, 1)
+# create genotype object and fill with missing (-1) genotypes
+genosSummary = fill(-1, (numInds, numHaploblockRegions)) 
+# fill object with appropriate genotypes
+i = 1 # doing this so I can later build a loop on this logic
+    #gw15:
+    genosSummary[ind_with_metadata_included.gw15_cluster .== "virLud", i] .= 0
+    genosSummary[ind_with_metadata_included.gw15_cluster .== "virLud_troch", i] .= 1
+    genosSummary[ind_with_metadata_included.gw15_cluster .== "troch", i] .= 2
+i = 2 #gw26:
+    genosSummary[ind_with_metadata_included.gw26_cluster .== "virLud", i] .= 0
+    genosSummary[ind_with_metadata_included.gw26_cluster .== "virLud_troch", i] .= 1
+    genosSummary[ind_with_metadata_included.gw26_cluster .== "troch", i] .= 2
+i = 3 #gw28:
+    genosSummary[ind_with_metadata_included.gw28_cluster .== "virLud", i] .= 0
+    genosSummary[ind_with_metadata_included.gw28_cluster .== "virLud_troch", i] .= 1
+    genosSummary[ind_with_metadata_included.gw28_cluster .== "troch", i] .= 2
+
+plotGroupsForSummary = ["vir","vir_S","lud_PK", "lud_KS", "lud_central", "lud_Sath", "lud_ML","troch_west","troch_LN"]
+groupColorsForSummary = ["blue","turquoise1","seagreen4","seagreen3","seagreen2","olivedrab3","olivedrab2","olivedrab1","yellow"] 
+
+plotHaploblockSummary(genosSummary, ind_with_metadata_included,
+                            plotGroupsForSummary, groupColorsForSummary;
+                            regionNames = HaploblockRegions,
+                            indFontSize = 8, figureSize = (1200, 1600),
+                            plotTitle = nothing,
+                            indColorLeftProvided = false,
+                            indColorRightProvided = false)
+
+#= # For debugging function:
+
+indMetadata = ind_with_metadata_included
+plotGroups = plotGroupsForSummary
+plotGroupColors = groupColorsForSummary
+regionNames = HaploblockRegions
+indFontSize = 10
+figureSize = (1200, 1200)
+plotTitle = nothing
+indColorLeftProvided = false
+indColorRightProvided = false =#
+
+"""
+    plotHaploblockSummary(genosSummary, indMetadata,
+                            plotGroups, plotGroupColors;
+                            regionNames,
+                            indFontSize=10, figureSize=(1200, 1200),
+                            plotTitle = nothing,
+                            indColorLeftProvided = false,
+                            indColorRightProvided = false)
+
+Construct a genotype-by-individual plot, with option to filter out SNPs with too much missing data. 
+
+Under the default setting, alleles are colored (dark purple vs. light purple) according to whichever allele is designated as `group1`. 
+
+​# Arguments
+
+- `genosSummary`: Matrix containing summary genotype data (individuals in rows, loci in columns).
+- `indMetadata`: Matrix of metadata for individuals; must contain `Fst_group` and `plot_order` columns.
+- `plotGroups`: Vector of group names to include in plot.
+- `plotGroupColors`: Vector of plotting colors corresponding to the groups.
+- `regionNames`: Optional; Names of the genotyped regions.
+- `indFontSize`: Optional; the font size of the individual ID labels.
+- `figureSize`: Optional; the size of the figure; default is `(1200, 1200)`.  
+- `plotTitle`: Optional; default will make a title. For no title, set to `""`.
+- `indColorLeftProvided`: Optional; Default is `false`. Set to `true` if there is a column labeled `indColorLeft` in the metadata providing color of each individual for plotting on left side.
+- `indColorRightProvided`: Optional; same as above but for right side (requires `indColorRight` column in metadata).
+
+# Notes
+Returns a tuple containing:
+- the figure
+- the plotted genotypes
+- the sorted metadata matrix for the plotted individuals
+"""
+function plotHaploblockSummary(genosSummary, indMetadata,
+                                plotGroups, plotGroupColors;
+                                regionNames = nothing,        
+                                indFontSize=10, figureSize=(1200, 1200),
+                                plotTitle = nothing,
+                                indColorLeftProvided = false,
+                                indColorRightProvided = false)
+    
+    # if the genoData has missing values, then convert to -1:
+    genosSummary[ismissing.(genosSummary)] .= -1
+
+    numRegions = size(genosSummary, 2)
+
+    genosSummary_subset = genosSummary[indMetadata.Fst_group .∈ Ref(plotGroups), :]
+    indMetadata_subset = indMetadata[indMetadata.Fst_group .∈ Ref(plotGroups), :]
+
+    # Choose sorting order by plot_order column in input metadata file
+
+    sorted_genosSummary_subset = genosSummary_subset[sortperm(indMetadata_subset.plot_order, rev=false), :]
+    numInds = size(sorted_genosSummary_subset, 1)
+    sorted_indMetadata_subset = indMetadata_subset[sortperm(indMetadata_subset.plot_order, rev=false), :]
+
+    # Set up the plot window:
+    f = CairoMakie.Figure(size=figureSize)
+
+    if isnothing(plotTitle)
+        plotTitle = "Summary of $numRegions haploblock genotypes for $numInds individuals"
+    end 
+
+    # Set up the main Axis: 
+    ax = Axis(f[1, 1],
+        title = plotTitle,
+        titlesize=30,
+        limits=(0.5 - 0.09 * (numRegions), 0.5 + 1.09 * (numRegions),
+            0.5 - 0.3 * numInds, 0.5 + numInds)
+    )
+    hidedecorations!(ax) # hide background lattice and axis labels
+    hidespines!(ax) # hide box around plot
+
+    genotypeColors = ["#3f007d", "#807dba", "#dadaeb", "grey50"]  # purple shades from colorbrewer
+
+    # plot evenly spaced by SNP order along chromosome:
+    # make top part of fig (genotypes for individuals)
+    labelCushion = numRegions / 100
+    label_x_left = 0.5 - labelCushion
+    label_x_right = 0.5 + numRegions + labelCushion
+    colorBoxCushion = 0.07 * numRegions
+    groupColorBox_x_left = 0.5 - colorBoxCushion
+    groupColorBox_x_right = 0.5 + numRegions + colorBoxCushion
+    boxWidth = 0.005 * numRegions * 2
+    groupColorBox_x_left = [-boxWidth, -boxWidth, boxWidth, boxWidth, -boxWidth] .+ groupColorBox_x_left
+    groupColorBox_x_right = [-boxWidth, -boxWidth, boxWidth, boxWidth, -boxWidth] .+ groupColorBox_x_right
+    groupColorBox_y = [0.4, -0.4, -0.4, 0.4, 0.4]
+
+    for i in 1:numInds
+        y = numInds + 1 - i  # y is location for plotting; this reverses order of plot top-bottom
+        labelText = last(split(sorted_indMetadata_subset.ID[i], "_"))  # this gets the last part of the sample ID (usually the main ID part)
+        # put sample label on left side:
+        CairoMakie.text!(label_x_left, y; text=labelText, align=(:right, :center), fontsize=indFontSize)
+        # put sample label on left side:
+        CairoMakie.text!(label_x_right, y; text=labelText, align=(:left, :center), fontsize=indFontSize)
+        if indColorLeftProvided
+            boxColorLeft = sorted_indMetadata_subset.indColorLeft[i]
+        else
+            boxColorLeft = plotGroupColors[findfirst(plotGroups .== sorted_indMetadata_subset.Fst_group[i])]
+        end
+        if indColorRightProvided
+            boxColorRight = sorted_indMetadata_subset.indColorRight[i]
+        else
+            boxColorRight = plotGroupColors[findfirst(plotGroups .== sorted_indMetadata_subset.Fst_group[i])]
+        end
+        CairoMakie.poly!(Point2f.(groupColorBox_x_left, (y .+ groupColorBox_y)), color=boxColorLeft)
+        CairoMakie.poly!(Point2f.(groupColorBox_x_right, (y .+ groupColorBox_y)), color=boxColorRight)
+    end
+
+    # generate my own plotting symbol (a rectangle)
+    box_x = [-0.45, -0.45, 0.45, 0.45, -0.45]
+    #box_x = [-0.5, -0.5, 0.5, 0.5, -0.5]
+    box_y = [0.4, -0.4, -0.4, 0.4, 0.4]
+    # generate triangles for plotting heterozygotes
+    triangle1_x = [-0.45, -0.45, 0.45, -0.45]
+    #triangle1_x = [-0.5, -0.5, 0.5, -0.5]
+    triangle1_y = [0.4, -0.4, 0.4, 0.4]
+    triangle2_x = [-0.45, 0.45, 0.45, -0.45]
+    #triangle2_x = [-0.5, 0.5, 0.5, -0.5]
+    triangle2_y = [-0.4, -0.4, 0.4, -0.4]
+    # cycle through individuals, graphing each type of genotype:
+    for i in 1:numInds
+        y = numInds + 1 - i  # y is location for plotting; this reverses order of plot top-bottom
+        #CairoMakie.lines!([0.5, numRegions + 0.5], [y, y], color="grey40") # for lines across the individual rows
+        genotypes = sorted_genosSummary_subset[i, :]
+        hom_ref_locs = findall(genotypes .== 0)
+        if length(hom_ref_locs) > 0
+            for j in eachindex(hom_ref_locs)
+                CairoMakie.poly!(Point2f.((hom_ref_locs[j] .+ box_x), (y .+ box_y)), color=genotypeColors[1])
+            end
+        end
+        het_locs = findall(genotypes .== 1)
+        if length(het_locs) > 0
+            for j in eachindex(het_locs)
+                CairoMakie.poly!(Point2f.((het_locs[j] .+ triangle1_x), (y .+ triangle1_y)), color=genotypeColors[1])
+                CairoMakie.poly!(Point2f.((het_locs[j] .+ triangle2_x), (y .+ triangle2_y)), color=genotypeColors[3])
+            end
+        end
+        hom_alt_locs = findall(genotypes .== 2)
+        if length(hom_alt_locs) > 0
+            for j in eachindex(hom_alt_locs)
+                CairoMakie.poly!(Point2f.((hom_alt_locs[j] .+ box_x), (y .+ box_y)), color=genotypeColors[3])
+            end
+        end
+    end
+
+    if isnothing(regionNames)
+        regionNames = string.(1:numRegions)
+    end
+
+    # make labels on lower part
+    y_label = 0.5 - 0.1numInds
+    for i in 1:numRegions
+        CairoMakie.text!(i, y_label; text = regionNames[i], align=(:center, :center), fontsize=30)
+    end
+
+    display(f)
+
+    return f, sorted_genosSummary_subset, sorted_indMetadata_subset
+end
+```
+
+
+
+### OLD STUFF BELOW (CAN PROBABLY DELETE, BUT MIGHT BE SOME GOOD BITS TO KEEP)
 
 
 ### Actually new plan: Just do the PCA on all individuals, then show a graph without the heterozygotes. Will do this above.
